AgentforceSysmapEmpreendimentos/force-app/main/default/objects/Torre__c/Torre__c.object-meta.xml
<CustomObject>
    <label>Torre</label>
    <nameField>
        <label>Nome da Torre</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Torres</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>