AgentforceSysmapEmpreendimentos/force-app/main/default/objects/Torre__c/fields/Empreendimento__c.field-meta.xml
<CustomField>
    <fullName>Empreendimento__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Empreendimento</label>
    <referenceTo>Empreendimento__c</referenceTo>
    <relationshipLabel>Torres</relationshipLabel>
    <relationshipName>Torres</relationshipName>
    <type>Lookup</type>
</CustomField>