AgentforceSysmapEmpreendimentos/force-app/main/default/objects/Torre__c/fields/Num_Andares__c.field-meta.xml
<CustomField>
    <fullName>Num_Andares__c</fullName>
    <label>Numero de Andares</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>