AgentforceSysmapEmpreendimentos/force-app/main/default/objects/Torre__c/fields/Unidades_Por_Andar__c.field-meta.xml
<CustomField>
    <fullName>Unidades_Por_Andar__c</fullName>
    <label>Unidades Por Andar</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>